--- a/Csharp_2021_WiederholungDerGrundlagen/Csharp_2021_WiederholungDerGrundlagen.csproj
+++ b/Csharp_2021_WiederholungDerGrundlagen/Csharp_2021_WiederholungDerGrundlagen.csproj
@@ -52,10 +52,20 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormMöbelstückHinzufügen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMöbelstückHinzufügen.Designer.cs">
+      <DependentUpon>FormMöbelstückHinzufügen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Möbel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMöbelstückHinzufügen.resx">
+      <DependentUpon>FormMöbelstückHinzufügen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
